test/ui/tests/fail/class-multiple-constructors.rs
struct Example;

#[neon::class]
impl Example {
    fn new() -> Self {
        Example
    }

    fn new() -> Self {
        Example
    }
}

fn main() {}
