test/ui/tests/fail/class-multiple-constructors.stderr
error: Only one `new` constructor is allowed in a class.
 --> tests/fail/class-multiple-constructors.rs:9:5
  |
9 |     fn new() -> Self {
  |     ^^
